jira GC #time 15m